--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -4,10 +4,12 @@
         <shape android:shape="rectangle">
             <gradient
                 android:type="linear"
-                android:startColor="@color/colorPrimary"
-                android:centerColor="@color/colorPrimaryDark"
+                android:startColor="@android:color/black"
+                android:centerColor="@color/colorPrimary"
                 android:endColor="@android:color/black"
-                android:angle="270"
+                android:angle="90"
+                android:centerY="0.8"
+                android:centerX="0.9"
                 />
         </shape>
     </item>
