--- a/app/src/main/res/layout/character_card.xml
+++ b/app/src/main/res/layout/character_card.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_character"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
